# ai-quota-monitor

./: .gitignore  PLAN.md  README.md  dev-server.js  electron_migration.md  package-lock.json  package.json  recfactor.md  server.js  test.txt  vercel.json
api/: claude.js  codex.js
doc/: REVIEW_REPORT.md
docs/: mobile-architecture.md
electron/: main.js  preload.js  store.js
node_modules_wsl/: .package-lock.json
public/: account-ui.js  app.js  index.html  styles.css  tauri-bridge.js  ui-logic.js
scripts/: build-zip.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: account_commands.rs  api_client.rs  commands.rs  error.rs  export_commands.rs  external_notify.rs  main.rs  notification_commands.rs  oauth_commands.rs  settings_commands.rs  store_repo.rs  token_refresh.rs  token_store.rs  usage_commands.rs  usage_parser.rs  validation.rs  window_commands.rs  window_ops.rs
src-tauri/src/oauth/: callback_server.rs  claude.rs  codex.rs  mod.rs  pkce.rs
src/core/: parsers.js  usage-clients.js  usage-service.js
test/core/: parsers.test.js  usage-clients.test.js  usage-service.test.js
test/ui/: ui-logic.test.js
