[package]
name = "ai-quota-monitor"
version = "0.0.2"
description = "AI quota monitor"
authors = ["Takahiro SUZUKI"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
keyring = "2"
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
zeroize = "1"
thiserror = "1"
